--- a/chassetresor/src/main/resources/templates/index.html
+++ b/chassetresor/src/main/resources/templates/index.html
@@ -11,6 +11,8 @@
                  
       <a th:href="@{/scenarioList}">Liste de sc&eacute;narios</a>  
       <a th:href="@{/etapeList}">Liste d'&eacute;tapes</a>  
+      <a th:href="@{/plotList}">Liste de plots</a>  
+      <a th:href="@{/briqueList}">Liste de briques</a>  
        
    </body>
     
