--- a/chassetresor/src/main/resources/templates/plotList.html
+++ b/chassetresor/src/main/resources/templates/plotList.html
@@ -6,8 +6,8 @@
       <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
    </head>
    <body>
-      <h1>Liste d'étapes</h1>
-      <a href="addPlot">Ajouter une étape</a>
+      <h1>Liste de plots</h1>
+      <a href="addPlot">Ajouter un plot</a>
       <br/><br/>
       <div>
          <table border="1">
